admin-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "24"
    meta.helm.sh/release-name: eatcloud-test
    meta.helm.sh/release-namespace: dev
  creationTimestamp: "2025-09-11T04:26:59Z"
  generation: 24
  labels:
    app: admin-service
    app.kubernetes.io/managed-by: Helm
    chart: eatcloud-apps-1.0.0
    release: eatcloud-test
    version: v1
  name: admin-service
  namespace: dev
  resourceVersion: "1191729"
  uid: 312e3989-4443-4af7-96a4-306db8ea346a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: admin-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-09-11T23:13:50+09:00"
      creationTimestamp: null
      labels:
        app: admin-service
        version: v1
    spec:
      containers:
      - env:
        - name: SPRING_PROFILES_ACTIVE
          value: aws
        - name: LOG_PATH
          value: /var/log/app
        - name: SPRING_APPLICATION_NAME
          value: admin-service
        - name: LOGGING_RECOMMENDATION_ENABLED
          value: "true"
        - name: SERVER_PORT
          value: "8083"
        image: 536580887516.dkr.ecr.ap-northeast-2.amazonaws.com/eatcloud/admin-service:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/v1/admin/actuator/health
            port: 8083
            scheme: HTTP
          initialDelaySeconds: 90
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: admin-service
        ports:
        - containerPort: 8083
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/admin/actuator/health/readiness
            port: 8083
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log/app
          name: app-logs
      - image: public.ecr.aws/aws-observability/aws-for-fluent-bit:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/health
            port: 2020
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: fluent-bit
        ports:
        - containerPort: 2020
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/health
            port: 2020
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /fluent-bit/etc
          name: fluent-bit-config
        - mountPath: /var/log/app
          name: app-logs
          readOnly: true
        - mountPath: /fluent-bit/tail
          name: fluent-bit-db
        - mountPath: /var/log/fluent-bit
          name: fluent-bit-logs
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: fluent-bit-service-account
      serviceAccountName: fluent-bit-service-account
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: app-logs
      - emptyDir: {}
        name: fluent-bit-db
      - emptyDir: {}
        name: fluent-bit-logs
      - configMap:
          defaultMode: 420
          name: fluent-bit-config
        name: fluent-bit-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-11T14:01:37Z"
    lastUpdateTime: "2025-09-11T14:16:45Z"
    message: ReplicaSet "admin-service-8c558b657" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-09-11T14:30:55Z"
    lastUpdateTime: "2025-09-11T14:30:55Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 24
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
