customer-service-reference.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "24"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"16"},"labels":{"app":"customer-service","version":"v1"},"name":"customer-service","namespace":"dev"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"customer-service"}},"strategy":{"rollingUpdate":{"maxSurge":"25%","maxUnavailable":"25%"},"type":"RollingUpdate"},"template":{"metadata":{"labels":{"app":"customer-service"," [...]
  creationTimestamp: "2025-09-12T05:24:19Z"
  generation: 24
  labels:
    app: customer-service
    version: v1
  name: customer-service
  namespace: dev
  resourceVersion: "2097131"
  uid: ec8cb3ae-0a70-4bf9-9a7b-3f8b3465d97b
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: customer-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2025-09-13T10:43:19+09:00"
      creationTimestamp: null
      labels:
        app: customer-service
        version: v1
    spec:
      containers:
      - env:
        - name: SPRING_DATASOURCE_URL
          value: jdbc:postgresql://eatcloud-dev-customer.cnikgsy08gto.ap-northeast-2.rds.amazonaws.com:5432/customerdb
        - name: SPRING_PROFILES_ACTIVE
          value: aws
        - name: LOG_PATH
          value: /var/log/app
        - name: SPRING_APPLICATION_NAME
          value: customer-service
        - name: LOGGING_RECOMMENDATION_ENABLED
          value: "true"
        - name: DB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: DB_PASSWORD
              name: db-secret
        - name: JAVA_OPTS
          value: -Xms512m -Xmx1536m -XX:+UseG1GC
        - name: AWS_STS_REGIONAL_ENDPOINTS
          value: regional
        - name: AWS_DEFAULT_REGION
          value: ap-northeast-2
        - name: AWS_REGION
          value: ap-northeast-2
        - name: AWS_ROLE_ARN
          value: arn:aws:iam::536580887516:role/FluentBitKinesisRole
        - name: AWS_WEB_IDENTITY_TOKEN_FILE
          value: /var/run/secrets/eks.amazonaws.com/serviceaccount/token
        image: 536580887516.dkr.ecr.ap-northeast-2.amazonaws.com/eatcloud/customer-service:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/customer/actuator/health/liveness
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: customer-service
        ports:
        - containerPort: 8082
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/customer/actuator/health/readiness
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 500m
            memory: 1Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log/app
          name: app-logs
        - mountPath: /var/run/secrets/eks.amazonaws.com/serviceaccount
          name: aws-iam-token
          readOnly: true
      - env:
        - name: AWS_REGION
          value: ap-northeast-2
        - name: AWS_DEFAULT_REGION
          value: ap-northeast-2
        - name: AWS_STS_REGIONAL_ENDPOINTS
          value: regional
        - name: AWS_ROLE_ARN
          value: arn:aws:iam::536580887516:role/FluentBitKinesisRole
        - name: AWS_WEB_IDENTITY_TOKEN_FILE
          value: /var/run/secrets/eks.amazonaws.com/serviceaccount/token
        image: fluent/fluent-bit:2.2.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/health
            port: 2020
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: fluent-bit
        ports:
        - containerPort: 2020
          name: http-metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/health
            port: 2020
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /fluent-bit/etc
          name: fluent-bit-config
        - mountPath: /var/log/app
          name: app-logs
          readOnly: true
        - mountPath: /fluent-bit/tail
          name: fluent-bit-db
        - mountPath: /var/run/secrets/eks.amazonaws.com/serviceaccount
          name: aws-iam-token
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: fluent-bit-service-account
      serviceAccountName: fluent-bit-service-account
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: app-logs
      - emptyDir: {}
        name: fluent-bit-db
      - configMap:
          defaultMode: 420
          name: fluent-bit-config
        name: fluent-bit-config
      - name: aws-iam-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: sts.amazonaws.com
              expirationSeconds: 86400
              path: token
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-09-13T01:29:43Z"
    lastUpdateTime: "2025-09-13T01:29:43Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-09-13T00:56:14Z"
    lastUpdateTime: "2025-09-13T01:45:20Z"
    message: ReplicaSet "customer-service-5c5476f9cc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 24
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
